--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ future: true
 
 # SNS settings
 RSS: false
-weibo_username:     false
+weibo_username:     烟波01浩淼
 zhihu_username:     false
 github_username:    yanbo01haomiao
 twitter_username:   yanbo01haomiao
@@ -23,8 +23,8 @@ twitter_username:   yanbo01haomiao
 # from 2016, 'pygments' is unsupported on GitHub Pages. Use 'rouge' for highlighting instead.
 highlighter: rouge
 permalink: pretty
-paginate: 10
-exclude: ["less","node_modules","Gruntfile.js","package.json","README.md","README.zh.md"]
+paginate: 10   # 每个页面展示多少文章
+exclude: ["less","node_modules","Gruntfile.js","package.json","README.md"]
 anchorjs: true                          # if you want to customize anchor. check out line:181 of `post.html`
 # If you have timezone issue (e.g. #68) in China, uncomment to use this:
 #timezone: CN  
