--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ future: true
 
 # SNS settings
 RSS: false
-weibo_username:     烟波01浩淼
+weibo_username:     5694770514
 zhihu_username:     false
 github_username:    yanbo01haomiao
 twitter_username:   yanbo01haomiao
