--- a/_config.yml
+++ b/_config.yml
@@ -68,8 +68,8 @@ kramdown:
 # ba_track_id: [your track id]
 
 # Google Analytics
-# ga_track_id: 'UA-49627206-1'            # Format: UA-xxxxxx-xx
-# ga_domain: huangxuan.me
+ga_track_id: 'UA-170171223-1'            # Format: UA-xxxxxx-xx
+ga_domain: auto
 
 
 
